# rusty-aoc

./: .gitignore  Cargo.toml  Makefile.toml  README.md  clippy.toml
.cargo/: config.toml
aoc-macro/: Cargo.toml
aoc-macro/src/: aoc_tests.rs  lib.rs
aoc2015/day01/: Cargo.toml
aoc2015/day01/src/: lib.rs
aoc2015/day02/: Cargo.toml
aoc2015/day03/: Cargo.toml
aoc2015/day04/: Cargo.toml
aoc2015/day04/src/: lib.rs
aoc2015/day05/: Cargo.toml
aoc2015/day06/: Cargo.toml
aoc2015/day06/src/: lib.rs
aoc2015/day07/: Cargo.toml
aoc2015/day08/: Cargo.toml
aoc2015/day09/: Cargo.toml
aoc2015/day10/: Cargo.toml
aoc2015/day11/: Cargo.toml
aoc2015/day11/src/: lib.rs
aoc2015/day12/: Cargo.toml
aoc2015/day12/src/: lib.rs
aoc2015/day13/: Cargo.toml
aoc2015/day13/src/: lib.rs
aoc2015/day14/: Cargo.toml
aoc2015/day14/src/: lib.rs
aoc2015/day15/: Cargo.toml
aoc2015/day15/src/: lib.rs
aoc2015/day16/: Cargo.toml
aoc2015/day17/: Cargo.toml
aoc2015/day17/src/: lib.rs
aoc2015/day18/: Cargo.toml
aoc2015/day18/src/: lib.rs
aoc2015/day19/: Cargo.toml
aoc2015/day19/src/: lib.rs
aoc2015/day20/: Cargo.toml
aoc2015/day21/: Cargo.toml
aoc2015/day21/src/: lib.rs
aoc2020/day01/: Cargo.toml
aoc2020/day01/src/: lib.rs
aoc2020/day02/: Cargo.toml
aoc2020/day03/: Cargo.toml
aoc2020/day04/: Cargo.toml
aoc2020/day04/src/: lib.rs
aoc2020/day05/: Cargo.toml
aoc2020/day05/src/: lib.rs
aoc2020/day06/: Cargo.toml
aoc2020/day06/src/: lib.rs
aoc2020/day07/: Cargo.toml
aoc2020/day07/src/: lib.rs
aoc2020/day08/: Cargo.toml
aoc2020/day09/: Cargo.toml
aoc2020/day10/: Cargo.toml
aoc2020/day10/src/: lib.rs
aoc2020/day11/: Cargo.toml
aoc2020/day12/: Cargo.toml
aoc2020/day13/: Cargo.toml
aoc2020/day14/: Cargo.toml
aoc2020/day15/: Cargo.toml
aoc2020/day16/: Cargo.toml
aoc2020/day17/: Cargo.toml
aoc2020/day17/src/: lib.rs
aoc2020/day18/: Cargo.toml
aoc2020/day19/: Cargo.toml
aoc2020/day20/: Cargo.toml
aoc2020/day20/src/: lib.rs
aoc2020/day21/: Cargo.toml
aoc2020/day22/: Cargo.toml
aoc2020/day22/src/: lib.rs
aoc2020/day23/: Cargo.toml
aoc2020/day24/: Cargo.toml
aoc2020/day25/: Cargo.toml
aoc2021/day01/: Cargo.toml
aoc2021/day02/: Cargo.toml
aoc2021/day03/: Cargo.toml
aoc2021/day04/: Cargo.toml
aoc2021/day05/: Cargo.toml
aoc2021/day05/src/: lib.rs
aoc2021/day06/: Cargo.toml
aoc2021/day06/src/: lib.rs
aoc2021/day07/: Cargo.toml
aoc2021/day08/: Cargo.toml
aoc2021/day09/: Cargo.toml
aoc2021/day10/: Cargo.toml
aoc2021/day11/: Cargo.toml
aoc2021/day12/: Cargo.toml
aoc2021/day13/: Cargo.toml
aoc2021/day14/: Cargo.toml
aoc2021/day15/: Cargo.toml
aoc2021/day16/: Cargo.toml
aoc2021/day17/: Cargo.toml
aoc2021/day18/: Cargo.toml
aoc2021/day19/: Cargo.toml
aoc2021/day20/: Cargo.toml
aoc2021/day21/: Cargo.toml
aoc2021/day22/: Cargo.toml
aoc2021/day23/: Cargo.toml
aoc2021/day24/: Cargo.toml
aoc2021/day25/: Cargo.toml
aoc2022/day01/: Cargo.toml
aoc2022/day02/: Cargo.toml
aoc2022/day03/: Cargo.toml
aoc2022/day04/: Cargo.toml
aoc2022/day05/: Cargo.toml
aoc2022/day06/: Cargo.toml
aoc2022/day07/: Cargo.toml
aoc2022/day08/: Cargo.toml
aoc2022/day09/: Cargo.toml
aoc2022/day10/: Cargo.toml
aoc2022/day11/: Cargo.toml
aoc2022/day12/: Cargo.toml
aoc2022/day13/: Cargo.toml
aoc2022/day14/: Cargo.toml
aoc2022/day15/: Cargo.toml
aoc2022/day16/: Cargo.toml
aoc2022/day17/: Cargo.toml
aoc2022/day18/: Cargo.toml
aoc2022/day19/: Cargo.toml
aoc2022/day20/: Cargo.toml
aoc2022/day21/: Cargo.toml
aoc2022/day22/: Cargo.toml
aoc2022/day23/: Cargo.toml
aoc2022/day24/: Cargo.toml
aoc2022/day25/: Cargo.toml
aoc2023/day01/: Cargo.toml
aoc2023/day02/: Cargo.toml
aoc2023/day03/: Cargo.toml
aoc2023/day04/: Cargo.toml
aoc2023/day05/: Cargo.toml
aoc2023/day06/: Cargo.toml
aoc2023/day07/: Cargo.toml
aoc2023/day08/: Cargo.toml
aoc2023/day09/: Cargo.toml
aoc2023/day10/: Cargo.toml
aoc2023/day11/: Cargo.toml
aoc2023/day12/: Cargo.toml
aoc2023/day13/: Cargo.toml
aoc2023/day14/: Cargo.toml
aoc2023/day15/: Cargo.toml
aoc2023/day16/: Cargo.toml
aoc2023/day17/: Cargo.toml
aoc2023/day18/: Cargo.toml
cli-runner/: Cargo.toml
cli-runner/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
solvers/: Cargo.toml
solvers/benches/: solvers.rs
solvers/src/: allocator.rs  lib.rs  macros.rs  main.rs  traits.rs
solvers/src/utils/: digit.rs  grid.rs  heuristic_item.rs  ok_iterator.rs  permutations.rs  slice.rs  u64ascii.rs
solvers/src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs
solvers/src/year2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.py  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
solvers/src/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
solvers/src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
solvers/src/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
solvers/tests/utils/: mod.rs
utils/: Cargo.toml
utils/src/: digit.rs  heuristic_item.rs  lib.rs  ok_iterator.rs  u64ascii.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs
(+103 files in other folders)
