[workspace]
members = [
    "common",
    "solvers",
    "web",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.74"
version = "0.1.0"
authors = ["Philippe Cholet"]
repository = "https://github.com/Philippe-Cholet/rusty-aoc"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
rustc-hash = "1.1.0"
# Dependencies to create procedural macros
cargo_toml = "0.17.1"
quote = "1.0.33"
syn = "2.0.39"
clap = { version = "4.4.10", features = ["derive"] }
thiserror = "1.0.50"
ureq = { version = "2.9.1", default-features = false, features = ["native-tls"] }
native-tls = "0" # Let ureq decide the version.
webbrowser = "0.8.12"

[profile.final]
inherits = "release"
lto = true
codegen-units = 1
panic = 'abort'

[profile.flamegraph]
inherits = "final"
debug = true
