[workspace]
members = [
    "common",
    "solvers",
    "web",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.74"
version = "0.2.0"
authors = ["Philippe Cholet"]
repository = "https://github.com/Philippe-Cholet/rusty-aoc"
license = "MIT OR Apache-2.0"

[profile.bench]
debug = true

[profile.final]
inherits = "release"
lto = true
codegen-units = 1
panic = 'abort'

[profile.flamegraph]
inherits = "final"
debug = true
