[package]
name = "aoc-macro"
edition = "2021"
description = "A macro to get the solver and inputs for a given year and day"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true
doctest = false

[dependencies]
cargo_toml.workspace = true
quote.workspace = true
syn.workspace = true
