[package]
name = "aoc-macro"
description = "A macro to get the solver and inputs for a given year and day"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
cargo_toml.workspace = true
itertools.workspace = true
quote.workspace = true
syn.workspace = true
