[package]
name = "common"
edition = "2021"
description = "Types that the runner and my solutions use for Advents of Code"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
test = false
doctest = false

[dependencies]
anyhow.workspace = true
