[package]
name = "common"
description = "Types that the runner and my solutions use for Advents of Code"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
test = false
doctest = false

[dependencies]
anyhow = "1.0"                # Error handling
rustc-hash = "1.1"            # Non-cryptographic but faster hasher
