[package]
name = "solvers"
description = "Run my rust solutions to Advents of Code from the command line"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
default-run = "solvers"

[[bin]]
name = "solvers"
test = false

[lib]
doctest = false

[features]
lp = ["dep:good_lp"]

[dependencies]
paste = "1.0.14"
aoc-macro = { path = "../aoc-macro" }
anyhow.workspace = true
good_lp = { version = "1.7.0", features = ["lp-solvers"], default-features = false, optional = true }
itertools.workspace = true
md5 = "0.7.0"
memchr = "2.6.4"
ndarray = "0.15.6"
num-integer = "0.1.45"
permutohedron = "0.2.4"
pest = "2.7.5"
pest_derive = "2.7.5"
petgraph = "0.6.4"
rand = "0.8.5"
serde_json = "1.0.108"
common = { path = "../common" }
