[package]
name = "utils"
edition = "2021"
description = "Utilities that my solutions can all use for Advents of Code"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
permutohedron.workspace = true
common = { path = "../common" }
