[package]
name = "utils"
description = "Utilities that my solutions can all use for Advents of Code"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
permutohedron.workspace = true
common = { path = "../common" }
