[package]
name = "web"
description = "Simple interactions with adventofcode.com"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
thiserror.workspace = true
ureq.workspace = true
native-tls.workspace = true
webbrowser.workspace = true
common = { path = "../common" }
