[package]
name = "web"
description = "Simple interactions with adventofcode.com"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
ureq = { version = "2.9", default-features = false, features = ["native-tls"] }
native-tls = "0" # Let ureq decide the version.
webbrowser = "1"
common = { path = "../common" }
