[package]
name = "aoc15-01"
edition = "2021"
description = "My solution for the Advent of Code 2015 day 1"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
common = { path="../../common" }
utils = { path="../../utils" }
