[package]
name = "aoc15-04"
edition = "2021"
description = "My solution for the Advent of Code 2015 day 4"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
md5.workspace = true
common = { path="../../common" }
utils = { path="../../utils" }
