[package]
name = "aoc20-01"
description = "My solution for the Advent of Code 2020 day 1"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
itertools.workspace = true
common = { path = "../../common" }
utils = { path = "../../utils" }
