[package]
name = "aoc20-04"
description = "My solution for the Advent of Code 2020 day 4"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
common = { path = "../../common" }
utils = { path = "../../utils" }
