[package]
name = "aoc20-10"
edition = "2021"
description = "My solution for the Advent of Code 2020 day 10"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
common = { path="../../common" }
utils = { path="../../utils" }
