[package]
name = "aoc20-17"
edition = "2021"
description = "My solution for the Advent of Code 2020 day 17"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
itertools.workspace = true
ndarray.workspace = true
common = { path="../../common" }
utils = { path="../../utils" }
