[package]
name = "aoc20-22"
edition = "2021"
description = "My solution for the Advent of Code 2020 day 22"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
common = { path="../../common" }
utils = { path="../../utils" }
