[package]
name = "aoc21-06"
edition = "2021"
description = "My solution for the Advent of Code 2021 day 6"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
common = { path="../../common" }
utils = { path="../../utils" }
